crates/analyzer/tests/snapshots/errors___test_fn_params.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: generic parameters are not supported on test functions
  ┌─ compile_errors/_test_fn_params.fe:4:9
  │
4 │ fn test1<T: MyTrait>() { }
  │         ^^^^^^^^^^^^ invalid generic parameters
  │
  = Hint: remove the generic parameters

error: function parameters other than `ctx` are not supported on test functions
  ┌─ compile_errors/_test_fn_params.fe:7:10
  │
7 │ fn test2(x: u256) { }
  │          ^^^^^^^ invalid function parameter
  │
  = Hint: remove the parameter

error: function parameters other than `ctx` are not supported on test functions
   ┌─ compile_errors/_test_fn_params.fe:10:10
   │
10 │ fn test3(foo: u256, ctx: Context) { }
   │          ^^^^^^^^^ invalid function parameter
   │
   = Hint: remove the parameter

error: function parameters other than `ctx` are not supported on test functions
   ┌─ compile_errors/_test_fn_params.fe:13:24
   │
13 │ fn test4(ctx: Context, foo: u256) { }
   │                        ^^^^^^^^^ invalid function parameter
   │
   = Hint: remove the parameter

error: generic function parameters aren't yet supported outside of struct functions
  ┌─ compile_errors/_test_fn_params.fe:4:9
  │
4 │ fn test1<T: MyTrait>() { }
  │         ^^^^^^^^^^^^ this cannot appear here
  │
  = Hint: Struct functions can have generic parameters

error: invalid parameter order
   ┌─ compile_errors/_test_fn_params.fe:10:21
   │
10 │ fn test3(foo: u256, ctx: Context) { }
   │                     ^^^^^^^^^^^^ `ctx: Context` must be the first parameter


